ARM/AzureBastion/bastion.template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "deployBastion": {
            "type": "bool",
            "defaultValue": true,
            "metadata": {
                "description": "Should deploy Azure Bastion and all associated resources."
            }
        },
        "virtualNetworkName": {
            "type": "string",
            "defaultValue": "VNet-Test",
            "metadata": {
                "description": "Virtual Network where Bastion Subnet will be created."
            }
        },
        "bastionName": {
            "type": "string",
            "defaultValue": "AzBastion",
            "metadata": {
                "description": "Name of Azure Bastion Instance."
            }
        },
        "bastionHostSku": {
            "type": "string"
            "defaultValue": "Basic",
            "metadata": {
                "description": "SKU of Azure Bastion (Basic or Standard)"
            }
        },
        "bastionSubnetAddressRange": {
            "type": "string",
            "defaultValue": "10.10.10.0/26",
            "metadata": {
                "description": "This is the subnet address range to which the Bastion resource will be deployed. The subnet must be created with the name AzureBastionSubnet. Use a subnet of at least /27 or larger (/27, /26, /25, and so on)."
            }
        },
        "bastionPublicIpName": {
            "type": "string",
            "defaultValue": "BastionIP",
            "metadata": {
                "description": "Bastion Public IP Address Name."
            }
        },
        "bastionSubnetNetworkSecurityGroupName": {
            "type": "String",
            "defaultValue": "BastionSubnetNSG",
            "metadata": {
                "description": "Name of the Network Security Group attached to Bastion Subnet."
            }
        },
        "onPremisesIPAddresses": {
            "type": "array",
            "defaultValue": [ "0.0.0.0/0" ],
                        "metadata": {
                "description": "Source IP Ranges from where users can initiate Bastion connections."
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "The location where the resources will be deployed."
            }
        }
    },
    "variables": {
        "bastionNSGsecurityRules": [
                    {
                        "name": "AllowHttpsInbound",
                        "properties": {
                            "description": "Allow 443 inbound from Endpoints connecting to Azure Bastion",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1200,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": "[parameters('onPremisesIPAddresses')]"
                        }
                    },
                    {
                        "name": "AllowGatewayManagerInbound",
                        "properties": {
                            "description": "Allow 443 inbound from Gateway Manager",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "GatewayManager",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1300,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowSshRdpOutbound",
                        "properties": {
                            "description": "Allow 3389 and 22 outbound to VirtualNetwork",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 1200,
                            "direction": "Outbound",
                            "destinationPortRanges": [
                                "3389",
                                "22"
                            ]
                        }
                    },
                    {
                        "name": "AllowAzureCloudOutbound",
                        "properties": {
                            "description": "Allow 443 outbound to Azure Cloud Endpoints",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "AzureCloud",
                            "access": "Allow",
                            "priority": 1300,
                            "direction": "Outbound"
                        }
                    }
                ]
    },
    "resources": [
        {
            "condition": "[parameters('deployBastion')]",
            "name": "[parameters('bastionSubnetNetworkSecurityGroupName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2021-02-01",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": "[variables('bastionNSGsecurityRules')]"
            },
            "tags": {}
        },
        {
            "condition": "[parameters('deployBastion')]",
            "name": "[concat(parameters('virtualNetworkName'),'/AzureBastionSubnet')]",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2021-02-01",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('bastionSubnetNetworkSecurityGroupName'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('bastionSubnetAddressRange')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('bastionSubnetNetworkSecurityGroupName'))]"
                }
            }
        },
        {
            "condition": "[parameters('deployBastion')]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "2020-08-01",
            "name": "[parameters('bastionPublicIpName')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            },
            "tags": {}
        },
        {
            "condition": "[parameters('deployBastion')]",
            "type": "Microsoft.Network/bastionHosts",
            "apiVersion": "2020-11-01",
            "name": "[parameters('bastionName')]",
            "sku": {
                "name": "[parameters('bastionHostSku')]"
            },
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets',parameters('virtualNetworkName'),'AzureBastionSubnet')]",
                "[resourceId('Microsoft.Network/publicIpAddresses', parameters('bastionPublicIpName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "IpConf",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets',parameters('virtualNetworkName'),'AzureBastionSubnet')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', parameters('bastionPublicIpName'))]"
                            }
                        }
                    }
                ]
            },
            "tags": {}
        }
    ]
}
